vitrail-pg-macros/tests/ui/fail/update_data_relation_field.stderr
error: relation field `author` cannot be used in update data for model `post`
  --> tests/ui/fail/update_data_relation_field.rs:5:1
   |
 5 | / schema! {
 6 | |     name update_schema
 7 | |
 8 | |     model user {
...  |
20 | | }
   | |_^
21 |
22 |   #[derive(UpdateData)]
   |            ---------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_assert_update_data_type_update_schema_post` which comes from the expansion of the derive macro `UpdateData` (in Nightly builds, run with -Z macro-backtrace for more info)
